--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./backend/server.js"
-  },
+		"dev": "export NODE_ENV=\"development\" && nodemon backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+		"start": "export NODE_ENV=\"production\" && node backend/server.js"
+	},
   "type": "module",
   "keywords": [],
   "author": "",
